Fix text overflow in balance table

--- a/fava/static/css/journal-table.css
+++ b/fava/static/css/journal-table.css
@@ -22,7 +22,6 @@
   font-family: var(--font-family-monospaced);
   color: var(--color-text);
   text-align: right;
-  white-space: nowrap;
 }
 
 .flex-table .number {
